    closes: #386837.
  * Handle properly the cs layout in config.proto and kbdcompiler.  Thanks
    to Colin Watson, closes: #386838.
  * Supply correct debian/po/POTFILES.in.  Thanks to Thomas Huriaux,
    closes: #387631.
  * Use /lib/lsb/init-functions in the init scripts when available.
    Thanks to Colin Watson, closes: #386844.

 -- Anton Zinoviev <zinoviev@debian.org>  Sat, 16 Sep 2006 16:14:20 +0300

console-setup (1.7) unstable; urgency=low

  [ Christian Perrier ]
  * Updated French translation
  * Added Czech translation. Closes: #360333

  [ Anton Zinoviev ]
  * Keyboard/ckbcomp: include /usr/share/X11/xkb to the list of
    directories for keyboard data.  The data from /etc/console-setup/ckb
    are still the default.
  * Sync the Keyboard/ckb data with the data in xkb-data package, version
    0.8-5.  Update ckbcomp with two new keysyms (Cyrillic_(CHE|KA)_vertbar).
  * Do not package the keyboard data.  Depend on xkb-data.  Thanks to
    Denis Barbier, closes: #359775.
  * Fix a shell syntax error in debian/config.proto that causes
    installation of console-setup to hang on powerpc.  Thanks to Colin
    Watson, closes: #374765.
  * ckbcomp: new option -compact to generate compact keymaps.
  * New experimental package console-setup-mini and udebs for d-i.
  * Correct a typo in the Bulgarian translation.  Thanks to Yavor Doganov,
    closes: #359677.
  * Updated Standards-Version: 3.7.2

 -- Anton Zinoviev <zinoviev@debian.org>  Sat, 22 Jul 2006 23:00:00 +0300

console-setup (1.6) unstable; urgency=low

  [ Anton Zinoviev ]
  * Few comments in debian/templates.
  * Document in console-setup/fontsize-fb template that non 8-pixel wide
    fonts can not be used with console-tools.  Add a warning in setupcon
    if the user tries to use such fonts with console-tools.  Thanks to
    Hans Ulrich Niedermann, closes: #352911.
  * debian/postinst: protect in double quotes the variables read from
    $CONFIGFILE.  Thanks to Jonas Meurer, closes: #353525.