@@ -16,8 +16,16 @@ console-setup (1.8) UNRELEASED; urgency=low
     closes: #387631.
   * Use /lib/lsb/init-functions in the init scripts when available.
     Thanks to Colin Watson, closes: #386844.
+  * config.proto: Try to use the value of debian-installer/keymap to get
+    default keyboard layout and variant and when that is possible ask the
+    corresponding Debconf questions with medium instead of critical
+    priority.  Thanks to Colin Watson, closes: #386836.
+  * config.proto(ask_debconf): when the provided default value is
+    unavailable, try to use the empty string.  Useful when asking for the
+    keyboard variant.
+  * Add README.Debian for console-setup.
 
- -- Anton Zinoviev <zinoviev@debian.org>  Sat, 16 Sep 2006 16:14:20 +0300
+ -- Anton Zinoviev <zinoviev@debian.org>  Sat, 16 Sep 2006 23:33:52 +0300
 
 console-setup (1.7) unstable; urgency=low
 
